--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="back">#000000</color>
     <color name="gray">#333333</color>
 
+    <color name="divider">#e3e3e8</color>
+
 </resources>
