--- a/app/src/main/res/layout-w900dp/user_list.xml
+++ b/app/src/main/res/layout-w900dp/user_list.xml
@@ -4,8 +4,6 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:layout_marginLeft="16dp"
-              android:layout_marginRight="16dp"
               android:baselineAligned="false"
               android:divider="?android:attr/dividerHorizontal"
               android:orientation="horizontal"
@@ -18,17 +16,18 @@
     
     -->
 
-    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-                                               xmlns:tools="http://schemas.android.com/tools"
-                                               android:id="@+id/user_list"
-                                               android:name="com.ntt.kchallenge.ui.users.UserListFragment"
-                                               android:layout_width="@dimen/item_width"
-                                               android:layout_height="match_parent"
-                                               android:layout_marginLeft="16dp"
-                                               android:layout_marginRight="16dp"
-                                               app:layoutManager="LinearLayoutManager"
-                                               tools:context="com.ntt.kchallenge.ui.users.UserListActivity"
-                                               tools:listitem="@layout/user_list_content"/>
+    <androidx.recyclerview.widget.RecyclerView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/user_list"
+            android:name="com.ntt.kchallenge.ui.users.UserListFragment"
+            android:layout_width="@dimen/item_width"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            app:layoutManager="LinearLayoutManager"
+            tools:context="com.ntt.kchallenge.ui.users.UserListActivity"
+            tools:listitem="@layout/user_list_content"/>
 
     <FrameLayout
             android:id="@+id/user_detail_container"
