--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,92 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".ui.login.LoginActivity">
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
+		android:id="@+id/container"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:clickable="true"
+		android:focusableInTouchMode="true"
+		android:background="@drawable/ic_login_background"
+		tools:context=".ui.login.LoginActivity">
+	
+	<ProgressBar
+			android:id="@+id/progress_loading"
+			android:visibility="gone"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"/>
+	
+	<androidx.core.widget.NestedScrollView
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:fillViewport="true"
+			android:layout_marginBottom="24dp"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent">
+		<androidx.constraintlayout.widget.ConstraintLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:animateLayoutChanges="true"
+				app:layout_constraintVertical_chainStyle="packed"
+				android:padding="@dimen/padding_large">
+			
+			<com.google.android.material.textfield.TextInputLayout
+					android:id="@+id/til_username"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					app:layout_constraintLeft_toLeftOf="parent"
+					app:layout_constraintTop_toTopOf="parent"
+					app:layout_constraintRight_toRightOf="parent"
+					app:layout_constraintVertical_chainStyle="packed"
+					app:layout_constraintBottom_toTopOf="@+id/til_password">
+				<com.google.android.material.textfield.TextInputEditText
+						android:id="@+id/tv_username"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:textColor="@color/white"
+						android:textColorHint="@color/white"
+						android:imeOptions="actionNext"
+						android:singleLine="true"
+						android:hint="Username"/>
+			</com.google.android.material.textfield.TextInputLayout>
+			
+			<com.google.android.material.textfield.TextInputLayout
+					android:id="@+id/til_password"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/padding_small"
+					app:layout_constraintLeft_toLeftOf="parent"
+					app:layout_constraintRight_toRightOf="parent"
+					app:layout_constraintTop_toBottomOf="@id/til_username"
+					app:layout_constraintBottom_toTopOf="@+id/spinner_country">
+				<com.google.android.material.textfield.TextInputEditText
+						android:id="@+id/tv_password"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:textColor="@color/white"
+						android:imeOptions="actionDone"
+						android:textColorHint="@color/white"
+						android:inputType="textPassword"
+						android:hint="Password"/>
+			</com.google.android.material.textfield.TextInputLayout>
+			
+			<androidx.appcompat.widget.AppCompatSpinner
+					android:id="@+id/spinner_country"
+					android:layout_width="0dp"
+					android:layout_height="50dp"
+					app:layout_constraintLeft_toLeftOf="parent"
+					app:layout_constraintRight_toRightOf="parent"
+					android:layout_marginTop="@dimen/padding_small"
+					app:layout_constraintTop_toBottomOf="@id/til_password"
+					app:layout_constraintBottom_toTopOf="@+id/tv_invalid_msg">
+			</androidx.appcompat.widget.AppCompatSpinner>
+			
+			<TextView
+					android:id="@+id/tv_invalid_msg"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/padding_small"
+					android:text="@string/invalid_info"
+					android:textColor="@color/red"
+					android:visibility="gone"
+					app:layout_constraintLeft_toLeftOf="parent"
+					app:layout_constraintRight_toRightOf="parent"
+					app:layout_constraintTop_toBottomOf="@id/spinner_country"
+					app:layout_constraintBottom_toTopOf="@+id/btn_login"/>
+			
+			<Button
+					android:id="@+id/btn_login"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/action_sign_in"
+					android:textColor="@color/white"
+					android:background="@drawable/btn_background"
+					android:layout_marginTop="@dimen/padding_large"
+					app:layout_constraintLeft_toLeftOf="parent"
+					app:layout_constraintRight_toRightOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/tv_invalid_msg"
+					app:layout_constraintBottom_toBottomOf="parent"/>
+		</androidx.constraintlayout.widget.ConstraintLayout>
+	</androidx.core.widget.NestedScrollView>
 
-    <EditText
-            android:id="@+id/txtUsername"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="96dp"
-            android:layout_marginEnd="24dp"
-
-            android:hint="@string/prompt_email"
-            android:inputType="textEmailAddress"
-            android:selectAllOnFocus="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-    <EditText
-            android:id="@+id/txtPassword"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
-
-            android:hint="@string/prompt_password"
-            android:imeActionLabel="@string/action_sign_in_short"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:selectAllOnFocus="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtUsername"/>
-
-    <androidx.appcompat.widget.AppCompatSpinner
-            android:id="@+id/spinnerCountry"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtPassword">
-
-    </androidx.appcompat.widget.AppCompatSpinner>
-
-    <Button
-            android:id="@+id/login"
-            android:enabled="false"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginStart="48dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="48dp"
-            android:layout_marginBottom="64dp"
-            android:text="@string/action_sign_in"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtPassword"
-            app:layout_constraintVertical_bias="0.2"/>
-
-    <ProgressBar
-            android:id="@+id/loading"
-            android:visibility="gone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="64dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="64dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/txtPassword"
-            app:layout_constraintStart_toStartOf="@+id/txtPassword"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.3"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
