--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="gray">#333333</color>
 
     <color name="divider">#e3e3e8</color>
+    <color name="transparent">#00000000</color>
+    <color name="red">#FF0000</color>
 
 </resources>
