--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">10dp</dimen>
     <dimen name="padding_large">16dp</dimen>
+    <dimen name="text_size_medium">14sp</dimen>
+    <dimen name="padding_small">8dp</dimen>
 </resources>
