--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -5,13 +5,14 @@
         android:id="@+id/detail_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         android:background="@color/white"
         tools:context=".ui.users.UserDetailFragment">
 
     <androidx.core.widget.NestedScrollView
             android:fillViewport="true"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <include layout="@layout/user_detail"/>
