--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
             android:startColor="#00FFFFFF"
-            android:endColor="#FF000080"
+            android:endColor="@color/colorPrimary"
             android:angle="270"/>
 </shape>
