--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,6 @@
 		android:id="@+id/container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:clickable="true"
 		android:focusableInTouchMode="true"
 		android:background="@drawable/ic_login_background"
 		tools:context=".ui.login.LoginActivity">
@@ -25,7 +24,6 @@
 			android:layout_width="0dp"
 			android:layout_height="0dp"
 			android:fillViewport="true"
-			android:layout_marginBottom="24dp"
 			app:layout_constraintTop_toTopOf="parent"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +52,7 @@
 						android:textColorHint="@color/white"
 						android:imeOptions="actionNext"
 						android:singleLine="true"
-						android:hint="Username"/>
+						android:hint="@string/username"/>
 			</com.google.android.material.textfield.TextInputLayout>
 			
 			<com.google.android.material.textfield.TextInputLayout
@@ -74,13 +72,13 @@
 						android:imeOptions="actionDone"
 						android:textColorHint="@color/white"
 						android:inputType="textPassword"
-						android:hint="Password"/>
+						android:hint="@string/password"/>
 			</com.google.android.material.textfield.TextInputLayout>
 			
 			<androidx.appcompat.widget.AppCompatSpinner
 					android:id="@+id/spinner_country"
 					android:layout_width="0dp"
-					android:layout_height="50dp"
+					android:layout_height="45dp"
 					app:layout_constraintLeft_toLeftOf="parent"
 					app:layout_constraintRight_toRightOf="parent"
 					android:layout_marginTop="@dimen/padding_small"
