--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#2929D6</color>
+    <color name="colorPrimaryDark">#2929D6</color>
+    <color name="colorAccent">#FF4500</color>
 
     <color name="white">#FFFFFF</color>
     <color name="back">#000000</color>
