--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,38 +1,51 @@
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-    <style name="AppTheme.Translucent" parent="AppTheme.NoActionBar">
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowTranslucentNavigation">true</item>
-    </style>
-    
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
-    
-    <style name="SplashScreenTheme" parent="AppTheme.Translucent">
-        <item name="android:background">@drawable/splash_background</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
-    </style>
-
-    <style name="EditTextStyle" parent="@style/Widget.AppCompat.EditText">
-        <item name="android:textSize">@dimen/text_size_medium</item>
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textColorHint">@color/white</item>
-        <item name="android:textAlignment">viewStart</item>
-    </style>
-    <style name="TextInputLayout">
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-    </style>
+	
+	<!-- Base application theme. -->
+	<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+		<!-- Customize your theme here. -->
+		<item name="colorPrimary">@color/colorPrimary</item>
+		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+		<item name="colorAccent">@color/colorAccent</item>
+	</style>
+	<style name="AppTheme.NoActionBar">
+		<item name="windowActionBar">false</item>
+		<item name="windowNoTitle">true</item>
+	</style>
+	<style name="AppTheme.Translucent" parent="Theme.AppCompat.NoActionBar">>
+		<item name="android:windowTranslucentStatus">true</item>
+		<item name="android:windowTranslucentNavigation">true</item>
+		<item name="colorPrimary">@color/colorPrimary</item>
+		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+		<item name="colorAccent">@color/colorAccent</item>
+	</style>
+	
+	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
+	
+	<style name="SplashScreenTheme" parent="AppTheme.Translucent">
+		<item name="android:background">@drawable/splash_background</item>
+		<item name="android:windowNoTitle">true</item>
+		<item name="android:windowFullscreen">true</item>
+	</style>
+	
+	<style name="EditTextStyle" parent="@style/Widget.AppCompat.EditText">
+		<item name="android:textSize">@dimen/text_size_medium</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textColorHint">@color/white</item>
+		<item name="android:textAlignment">viewStart</item>
+	</style>
+	
+	<style name="TextViewBoldStyle">
+		<item name="android:textSize">@dimen/text_size_large</item>
+		<item name="android:textColor">@color/black</item>
+		<item name="android:textStyle">bold</item>
+		<item name="android:textAppearance">?attr/textAppearanceListItem</item>
+	</style>
+	
+	<style name="TextViewStyle">
+		<item name="android:textSize">@dimen/text_size_medium</item>
+		<item name="android:textColor">@color/black</item>
+		<item name="android:textAppearance">?attr/textAppearanceListItem</item>
+	</style>
+	<color name="black">#000000</color>
 </resources>
