--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,11 +77,10 @@
 			
 			<androidx.appcompat.widget.AppCompatSpinner
 					android:id="@+id/spinner_country"
-					android:layout_width="0dp"
-					android:layout_height="45dp"
+					style="@style/SpinnerStyle"
+					android:layout_marginTop="@dimen/padding_small"
 					app:layout_constraintLeft_toLeftOf="parent"
 					app:layout_constraintRight_toRightOf="parent"
-					android:layout_marginTop="@dimen/padding_small"
 					app:layout_constraintTop_toBottomOf="@id/til_password"
 					app:layout_constraintBottom_toTopOf="@+id/tv_invalid_msg">
 			</androidx.appcompat.widget.AppCompatSpinner>
@@ -90,10 +89,11 @@
 					android:id="@+id/tv_invalid_msg"
 					android:layout_width="0dp"
 					android:layout_height="wrap_content"
-					android:layout_marginTop="@dimen/padding_small"
+					android:layout_marginTop="@dimen/padding_xsmall"
 					android:text="@string/invalid_info"
-					android:textColor="@color/red"
+					android:textColor="@color/colorAccent"
 					android:visibility="gone"
+					android:layout_marginLeft="@dimen/padding_xsmall"
 					app:layout_constraintLeft_toLeftOf="parent"
 					app:layout_constraintRight_toRightOf="parent"
 					app:layout_constraintTop_toBottomOf="@id/spinner_country"
