--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4500</color>
 
     <color name="white">#FFFFFF</color>
-    <color name="back">#000000</color>
+    <color name="black">#000000</color>
     <color name="gray">#333333</color>
 
     <color name="divider">#e3e3e8</color>
