--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,15 +1,17 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
-    <dimen name="app_bar_height">200dp</dimen>
-    <dimen name="item_width">200dp</dimen>
-    <dimen name="text_margin">16dp</dimen>
-    <dimen name="text_margin_small">5dp</dimen>
-    <dimen name="padding_large">16dp</dimen>
-    <dimen name="text_size_large">16sp</dimen>
-    <dimen name="text_size_medium">14sp</dimen>
-    <dimen name="padding_small">8dp</dimen>
+	<!-- Default screen margins, per the Android Design guidelines. -->
+	<dimen name="activity_horizontal_margin">16dp</dimen>
+	<dimen name="activity_vertical_margin">16dp</dimen>
+	<dimen name="fab_margin">16dp</dimen>
+	<dimen name="app_bar_height">200dp</dimen>
+	<dimen name="item_width">200dp</dimen>
+	<dimen name="text_margin">16dp</dimen>
+	<dimen name="text_margin_small">5dp</dimen>
+	<dimen name="padding_large">16dp</dimen>
+	<dimen name="text_size_large">16sp</dimen>
+	<dimen name="text_size_medium">14sp</dimen>
+	<dimen name="padding_small">8dp</dimen>
+	<dimen name="padding_xsmall">4dp</dimen>
 	<dimen name="text_size_xlarge">20sp</dimen>
+	<dimen name="spinner_height">45dp</dimen>
 </resources>
