--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,7 +32,6 @@
 		<item name="android:textSize">@dimen/text_size_medium</item>
 		<item name="android:textColor">@color/white</item>
 		<item name="android:textColorHint">@color/white</item>
-		<item name="android:textAlignment">viewStart</item>
 	</style>
 	
 	<style name="TextViewBoldStyle">
@@ -47,5 +46,12 @@
 		<item name="android:textColor">@color/black</item>
 		<item name="android:textAppearance">?attr/textAppearanceListItem</item>
 	</style>
-	<color name="black">#000000</color>
+	
+	<style name="SpinnerStyle" parent="@style/Widget.AppCompat.ListView.DropDown">
+		<item name="android:layout_width">0dp</item>
+		<item name="android:layout_height">@dimen/spinner_height</item>
+		<item name="android:spinnerMode">dialog</item>
+		<item name="android:focusable">false</item>
+		<item name="android:textColor">@color/white</item>
+	</style>
 </resources>
